# src/routes/auth.route.ts
@@ -1,9 +1,10 @@
 import { Router } from "express"
-import { setOtp } from "../controllers/auth.controller.ts"
-import { userSchema } from "../utils/validations.ts"
+import { setOtp, verifyOtp } from "../controllers/auth.controller.ts"
+import { getOtpSchema, verifyOtpSchema } from "../utils/validations.ts"
 import { requestBodyValidation } from "../middlewares/requestBody.middleware.ts"
 const router: Router = Router()
 
-router.post("/", requestBodyValidation(userSchema), setOtp)
+router.post("/get-otp", requestBodyValidation(getOtpSchema), setOtp)
+router.post("/verify-otp", requestBodyValidation(verifyOtpSchema), verifyOtp)
 
 export default router
